@@ -547,6 +547,9 @@ moveList = ASCII string representing moves made
 Note:
 If robber or victim is user_id, corresponding "_name" field is set to "You".
 
+loot_value will start with a "b" (like "b1500") if the robber died and
+the loot_value field actually represents the bounty earned from killing this
+robber.
 
 
 
